2009-06-23:
===========

- Continued work on the color input GUI component.
- The Color Mixer shows up now when the user clicks the color inputs. Bad 
styling, at the moment.
- New English strings.

2009-06-22:
===========

- Fixed the "Insert image" tool.
- Disabled the Text tool in Opera, due to heavy redraw issues, memory leaks, and 
security violations. Eh. Bugs reported to Opera.
- Modest beginnings of the new color input GUI component.
- New English strings.

2009-06-21:
===========

- Made improvements to the GUI floating panel component.
- Completed the "About PaintWeb" floating panel.
- Added a PaintWeb logo.
- Updated/new English strings.

2009-06-20:
===========

- Made the Text tool work with Opera 9+ and Firefox 3.0+.
For Opera I use SVG. Unfortunately, sometimes Opera has random SVG redraw 
glitches which are visible when using the Text tool inside PaintWeb.
For Firefox 3.0 (Gecko 1.9.0) I use their proprietary mozPathText() method.

2009-06-19:
===========

- demo1 now shows "loading, please wait..." when PaintWeb is loading.
- Fix for the PaintWeb library: keypress is not fired by Gecko in input 
elements, for the Up/Down arrows.
- Better shadows support detection - it determines properly that Firefox 3.0 
does not implement shadows.
- Better error handling for the initialization. In case of file not found, or 
such, the application will now display an error (failed to load ...), instead of 
failing silently.
- Buffer context initialization, which reads the configuration file and updates 
the context accordingly. This fixes previous inconsistencies.
- Users can press the Up/Down arrows in all inputs of type=number to 
increase/decrease the numeric value.
- Completed the GUI work needed for the Text tool tab.
- Completed the work on the Text tool itself. Just need to try workarounds for 
Opera and Firefox 3.0 compatibility.
- New configuration options for shadows and text.
- New English strings.

2009-06-18:
===========
