@@ -10,7 +10,7 @@
     --></style>
 
     <!-- $URL: http://code.google.com/p/paintweb $
-         $Date: 2009-06-19 12:34:19 +0300 $ -->
+         $Date: 2009-06-23 22:39:53 +0300 $ -->
   </head>
   <body>
     <p>Welcome to PaintWeb!</p>
@@ -23,6 +23,20 @@
     <p><button id="buttonEditImage">Edit image!</button></p>
 
     <div id="PaintWebTarget"></div>
+
+    <p>Do you have any feedback to provide? Please <a 
+      href="http://moodle.org/mod/forum/discuss.php?d=126528">post it over at 
+      Moodle</a>!</p>
+
+    <!--[if IE]>
+    <p>Please note that this application does not work in Internet Explorer 
+    - any other modern browser should work fine. Try <a 
+      href="http://www.google.com/chrome">Chrome</a>, <a 
+      href="http://www.mozilla.com">Firefox</a>, <a 
+      href="http://www.apple.com/safari">Safari</a>, <a 
+      href="http://www.opera.com">Opera</a> or <a 
+      href="http://www.konqueror.org">Konqueror</a>)</p>
+    <![endif]-->
 
     <script type="text/javascript" src="../src/includes/debug.js"></script>
     <script type="text/javascript" src="../src/paintweb.js"></script>
