@@ -1,5 +1,5 @@
 {
-  // $Date: 2009-06-21 21:06:19 +0300 $
+  // $Date: 2009-06-23 22:23:21 +0300 $
   // TODO: try jsdoc-toolkit on this json (!)
 
   /**
@@ -239,17 +239,17 @@
      * Line cap. Possible values: "butt", "round", "square".
      *
      * @type String
-     * @default "butt"
+     * @default "round"
      */
-    "lineCap": "butt",
+    "lineCap": "round",
 
     /**
      * Line join. Possible values: "round", "bevel", "miter".
      *
      * @type String
-     * @default "miter"
+     * @default "round"
      */
-    "lineJoin": "miter",
+    "lineJoin": "round",
 
     /**
      * Line width.
