@@ -5,6 +5,9 @@
 - The Color Mixer shows up now when the user clicks the color inputs. Bad 
 styling, at the moment.
 - New English strings.
+- New line settings as defaults. (Martin's suggestion)
+- Linking to the Moodle discussion about PaintWeb - asking for feedback in 
+demo1. (Helen's suggestion)
 
 2009-06-22:
 ===========
